[metadata]
name = cachetools
version = 4.2.1
url = https://github.com/tkem/cachetools/
author = Thomas Kemmer
author_email = tkemmer@computer.org
license = MIT
license_file = LICENSE
description = Extensible memoizing collections and decorators
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = ~= 3.5

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
exclude = .git, .tox

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1
